# trexanh

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: audit.toml  deny.toml
.github/workflows/: ci.yaml  cicd.yaml  release.yaml
src/: api.rs  app.rs  background.rs  cache.rs  config.rs  main.rs  models.rs  ui.rs
