[package]
name = "trexanh"
version = "0.9.7"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2.177"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
